--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <title>Appja</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9037892845600689"
      crossorigin="anonymous"></script>
   </head>
